opt/kube/namespace.yaml
apiVersion: v1        
kind: Namespace       
metadata:
  managedFields:      
  - apiVersion: v1    
    fieldsType: FieldsV1   
    fieldsV1:         
      f:status:       
        f:phase: {}   
    manager: kubectl-create                        
    operation: Update                      
  name: fetchtrades
spec:                 
  finalizers:         
  - kubernetes        
status:
  phase: Active
