opt/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: fetchtrades
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.org/websocket-services: fetchtrades-service-api
    # nginx.ingress.kubernetes.io/server-snippets: |
    #   location /ws/v3 {
    #     proxy_http_version 1.1;
    #     proxy_set_header Upgrade "websocket";   
    #     proxy_set_header Connection "Upgrade";
    #     proxy_set_header Host $host;
    #   }

spec:
  rules:
  - host: domen.com
    http:
      paths:
      - path: /admin/
        pathType: ImplementationSpecific
        backend:
          service:
            name: fetchtrades-api-node-port
            port:
              number: 8080
      - path: /api/v1/
        pathType: ImplementationSpecific
        backend:
          service:
            name: fetchtrades-api-node-port
            port:
              number: 8080
      - path: /statics/
        pathType: ImplementationSpecific
        backend:
          service:
            name: fetchtrades-api-node-port
            port:
              number: 8080
      - path: /api/vg1
        pathType: ImplementationSpecific
        backend:
          service:
            name: fetchtrades-golang-api-node-port
            port:
              number: 8080
